# Hugging-Face-Custom-Dataset

./: .gitignore  README.md  app.py  pyproject.toml
docs/: README.md  welcome.md
